# Desafio-Dio-FastAPI-Python-TDD

./: .coverage  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
store/: main.py  routers.py
store/controllers/: product.py
store/core/: exceptions.py
store/docs/assets/: README.md
store/models/: product.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
