[project]
name = "tdd-project"
version = "0.0.1"
description = "Projeto TDD para Bootcamp DIO"
authors = [
    {name = "Diego Claro de Moraes", email = "di.claro.batera@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13,<0.116.0",
    "uvicorn>=0.34.3,<0.35.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "motor>=3.7.1,<4.0.0",
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "pytest-mock>=3.14.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_use_uvloop = false
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
    "--cov=store",
    "--cov-report=term-missing"
]
xfail_strict = true
junit_family = "xunit32"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]

[tool.poetry]
packages = [
    {include = "store"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
